# wasm-pathfinder

./: .gitmodules  Cargo.toml  README.md
pkg/: wasm_pathfinder.d.ts  wasm_pathfinder.js  wasm_pathfinder_bg.js  wasm_pathfinder_bg.wasm  wasm_pathfinder_bg.wasm.d.ts
src/: feature.rs  lib.rs  node.rs  pathfinding.rs  utils.rs
